--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -393,6 +393,15 @@ a {
   }
 }
 
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .imgDark {
   display: none;
 }
